GROUPINGS-483 Fixed the white space problem for mobile screen sizes.

--- a/src/main/resources/static/css/colors.css
+++ b/src/main/resources/static/css/colors.css
@@ -170,6 +170,29 @@ h2, h3, h4, h5, h6 {
     }
 }
 
+/**
+ * Styling for selected grouping header.
+ * Styles the gourping name and 'Return to Groupings'
+ * button, so on mobile, the button sits on top of the
+ * grouping name, eliminating whitespace.
+ */
+@media screen and (max-width: 500px) {
+    #selectedGroupHeader {
+        display:table; /* The row is now a table */
+        /* Centering */
+        margin: auto;
+        width: 100%;
+        padding: 0px;
+    }
+    .col-md-9 {
+        display: table-footer-group; /* Makes the grouping name the footer of table */
+    }
+    .col-md-3 {
+        display: table-header-group; /* Makes the button the header of table */
+
+    }
+}
+
 .nav-pills .nav-link {
     color: var(--dark-teal);
     height: 44px;
